--- a/Proof_Proposition_7.ipynb
+++ b/Proof_Proposition_7.ipynb
@@ -67,7 +67,7 @@
     "    D = get_D(3 - (case % 2), p, q, r)\n",
     "    print(D)\n",
     "\n",
-    "# Note that ((-1)**s + 1) * ((-1)**s - 1) is zero, for all integers s"
+    "# Note that ((-1)**s + 1) * ((-1)**s - 1) is zero for all integers s"
    ]
   }
  ],
