--- a/Proof_Proposition_7.ipynb
+++ b/Proof_Proposition_7.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "def get_D(k, p, q, r):\n",
-    "    # Expressions for D_{n, k}(a) from Table 2 in the cases k = 2 or k = 3\n",
+    "    # Expressions for D_{n, k}(a) from Table 2 in the cases k = 2 and k = 3\n",
     "    if k == 2:\n",
     "        D = 2 * (p - q) ** 2 - 3 * (p + q) + r\n",
     "    if k == 3:\n",
