Changed D_{n, k} to D_{k, n} for consistency

--- a/Proof_Proposition_7.ipynb
+++ b/Proof_Proposition_7.ipynb
@@ -3,11 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_D(k, p, q, r):\n",
-    "    # Expressions for D_{n, k}(a) from Table 2 in the cases k = 2 and k = 3\n",
+    "    # Expressions for D_{k, n}(a) from Table 2 in the cases k = 2 and k = 3\n",
     "    if k == 2:\n",
     "        D = 2 * (p - q) ** 2 - 3 * (p + q) + r\n",
     "    if k == 3:\n",
@@ -44,7 +48,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +92,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
