--- a/Computation_Bound_B_n.ipynb
+++ b/Computation_Bound_B_n.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_B(n):\n",
@@ -24,7 +28,7 @@
     "        powers_Q.append((powers_Q[m - 1] * Q).expand())\n",
     "        powers_R.append((powers_R[m - 1] * R).expand())\n",
     "\n",
-    "    D = {}  # For the values D_{n, k}^{p, q, r}\n",
+    "    D = {}  # For the values D_{k, n}^{p, q, r}\n",
     "    for p in range(n_half + 1):\n",
     "        for q in range(n_half - p + 1):\n",
     "            r = n_half - p - q\n",
@@ -63,7 +67,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -131,7 +139,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "sage",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
